# xpm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  install.sh
.github/workflows/: roadmap-sync.yml
crates/xpm/: Cargo.toml
crates/xpm-core/: Cargo.toml
crates/xpm-core/src/: config.rs  error.rs  hooks.rs  lib.rs  repo_db.rs  repo_sync.rs  signing.rs  transaction.rs
crates/xpm-core/src/package/: buildinfo.rs  mod.rs  mtree.rs  pkginfo.rs  reader.rs  types.rs  validate.rs
crates/xpm-core/src/resolver/: provider.rs  tests.rs  types.rs  version.rs
crates/xpm/src/: cli.rs  main.rs
docs/: CLI.md  FETCH_TARGETS.md  INSTALL_AND_UPGRADE.md  ISSUE_56_REPOSITORY_DATABASE_TEST_SUITE.md  XFETCH_FULL_FLOW.md
etc/: xpm.conf.example
packaging/xpkg/: XBUILD
tests/: repo_db_integration.rs  repo_db_real_integration.rs
