[package]
name = "xpm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for the xpm package manager"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
resolvo = { workspace = true }
itertools = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
sha2 = { workspace = true }
sequoia-openpgp = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
